Fix spacing

--- a/src/app/term-input/term-input.component.css
+++ b/src/app/term-input/term-input.component.css
@@ -1,8 +1,7 @@
 input {
-  display: flex;
-  flex-direction: row;
   margin-left: 0.5em;
   flex-grow: 1;
+  width: 1px;
   height: 100%;
   background-color: #111111;
   border-style: none;
